--- a/css/index.css
+++ b/css/index.css
@@ -1,43 +1,125 @@
+@charset "UTF-8";
+/*
+Sass利用法： コマンドプロンプトを起動 このディレクトリ直上のディレクトリまで移動 「sass --watch sass:css --style compact」 後は放置で自動的にいける
+
+Sass手引き： ■セレクタ、プロパティの入れ子 ■「&(親)」セレクタ ■セレクタの継承(「@extend セレクタ」) ■変数(「$変数名: 値;」) ■Mixin ・引数なし： @mixin Mixinの名前 { 中身… } ・引数あり @mixin Mixinの名前(引数１,引数２…){ 中身… } ・引数あり（デフォルト値付き） @mixin Mixinの名前(引数１:デフォルト値,引数２:デフォルト値…){ 中身… } ■@import ■partials
+*/
+/*--------------------------------------------------*/
+/* 基礎CSS */
+/*--------------------------------------------------*/
+@font-face { font-family: "GN-きんいろサンセリフ 太字"; src: url("../font/GN-Kin-iro_SansSerif.ttf"); }
+html { width: 100%; font-family: "GN-きんいろサンセリフ 太字"; font-size: 32px; }
+
+body { width: 100%; height: 100%; margin: 0; padding: 0; z-index: 0; }
+
+body:after { /*擬似要素をつくる*/ position: fixed; /*固定配置*/ top: 0; left: 0; /*左上に固定*/ width: 100%; height: 100%; /*画面全体を覆う*/ content: ""; background: -webkit-linear-gradient(#000046 0%, #1CB5E0 100%); background: -o-linear-gradient(#000046 0%, #1CB5E0 100%); background: linear-gradient(#000046 0%, #1CB5E0 100%); animation: huerotator 3s infinite alternate; z-index: -100; }
+
+@keyframes huerotator { 0% { -webkit-filter: hue-rotate(0deg); filter: hue-rotate(0deg); }
+  100% { -webkit-filter: hue-rotate(-20deg); filter: hue-rotate(-20deg); } }
+ul, li { margin: 0; padding: 0; }
+
+ul { list-style: none; }
+
+ul.side-by-side li { display: inline-block; }
+
+/*--------------------------------------------------*/
+/* ゲーム部分本体のCSS */
+/*--------------------------------------------------*/
+/*------------------------*/
+/* ヘッダー(上部)部分のCSS */
+/*------------------------*/
+#header { z-index: 100; }
+
+#gauge { top: 30px; left: 20px; position: fixed; font-size: 30px; color: white; }
+
+#control-bar { top: 30px; right: 20px; position: fixed; }
+
+.header-icon { margin: 8px; }
+
+.header-icon-img { height: 32px; margin-right: 8px; }
+
+/*------------------------*/
+/* センタービジュアル(中央)部分のCSS */
+/*------------------------*/
+#Airy { top: 200px; width: 100%; position: absolute; text-align: center; }
+
+#Airy-img { height: 550px; }
+
+#Mily { top: 300px; width: 100%; position: absolute; text-align: center; }
+
+#Mily-img { height: 150px; }
+
+/*------------------------*/
+/* メイン操作(下部)部分のCSS */
+/*------------------------*/
+#mope { top: 800px; width: 95%; height: 35%; position: absolute; margin: 20px; }
+
+/* タブ表示のCSSここから */
+.tab-radios[type="radio"] { display: block; }
+
+.tab-label { -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; cursor: pointer; -webkit-transition-duration: .2s; transition-duration: .2s; }
+
+.tab-label:hover { color: #666; }
+
+.mope-field-con { max-height: 0; opacity: 0; -webkit-transition-duration: .3s; transition-duration: .3s; }
+
+.mope-field-con { max-height: 0; opacity: 0; -webkit-transition-duration: .3s; transition-duration: .3s; }
+
+/* タブのチェック機構ここから */
+#mope-field-mily-ctrl:checked ~ .mope-field-con #mope-field-mily { max-height: initial; opacity: 1; }
+
+#mope-field-friend-ctrl:checked ~ .mope-field-con #mope-field-friend { max-height: initial; opacity: 1; }
+
+#mope-field-mily-ctrl:checked ~ #mope-tabs-list #for-mope-field-mily { pointer-events: none; cursor: default; }
+
+#mope-field-mily-ctrl:checked ~ #mope-tabs-list #for-mope-field-mily label.tab-label { opacity: .6; }
+
+#mope-field-friend-ctrl:checked ~ #mope-tabs-list #for-mope-field-friend { pointer-events: none; cursor: default; }
+
+#mope-field-friend-ctrl:checked ~ #mope-tabs-list #for-mope-field-friend label.tab-label { opacity: .6; }
+
+/* タブのチェック機構ここまで */
+/* タブ表示のCSSここまで */
+#mope-tag { margin-bottom: 10px; }
+
+#mope-tag li { padding: 10px 20px; }
+
+.mope-field-con:not(:first-child) { margin-top: 10px; }
+
+#mope-field { margin-top: 20px; }
+
+.mope-field-lv { width: 15%; padding: 10px; }
+
+.mope-field-des { width: 50%; padding: 10px; }
+
+.mope-field-up { width: 20%; padding: 10px; font-size: 20px; }
+
+/*------------------------*/
+/* フッター(下部)部分のCSS */
+/*------------------------*/
+footer { bottom: 0; position: fixed; width: 100%; z-index: 100; }
+
+#footer-control li { width: 45%; margin-left: 10px; margin-bottom: 10px; padding: 10px; text-align: center; font-size: 40px; }
+
+/*--------------------------------------------------*/
+/* デバッグ用CSS */
+/*--------------------------------------------------*/
+.bgv { background-color: white; opacity: .8; }
+
+/*--------------------------------------------------*/
+/* smart.css  画面の横幅が640pxまで */
+/*--------------------------------------------------*/
+@media only screen and (max-width: 640px) {     /*     img{ max-width: 100%; height: auto; width: auto; }
+*/
+  /* ～以下、画面の横幅が640pxまでの場合のスタイル記入～ */ }
 /* 基礎タグにつけるCSS ---------------------*/
-
 /* ライブラリ等で追加された要素につけるCSS -------*/
-
 /* その他 */
-@keyframes show1{
-	0% {
-		transform:translate(0,2em);        
-		opacity:.5;
-	}
-	100% {
-		transform:translate(0,0);
-		opacity:1;
-	}
-}
+@keyframes show1 { 0% { transform: translate(0, 2em); opacity: .5; }
+  100% { transform: translate(0, 0); opacity: 1; } }
 /* モーダルウィンドウコンテンツのCSS ---------------------*/
-#modal-overlay{ /* 参考文献:https://syncer.jp/jquery-modal-window */
-	display:none;
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	height:120%; /* スマホ対策 */
-	background-color:rgba(0,0,0,0.75);
-	z-index:1;
-}
+#modal-overlay { /* 参考文献:https://syncer.jp/jquery-modal-window */ display: none; position: fixed; top: 0; left: 0; width: 100%; height: 120%; /* スマホ対策 */ background-color: rgba(0, 0, 0, 0.75); z-index: 1; }
 
 /* その他--------------------------------------- */
 
-/*===============================================
-●smart.css  画面の横幅が640pxまで
-===============================================*/
-@media only screen and (max-width:640px){
-/*     img{
-        max-width: 100%;
-        height: auto;
-        width auto;　
-    }
-*/
-    /* ～以下、画面の横幅が640pxまでの場合のスタイル記入～ */
-    body{
-    }
-}
+/*# sourceMappingURL=index.css.map */
