--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,11 @@
 @charset "utf-8";
 @import "common";
+@import "cssjs";
 /* 基礎タグにつけるCSS ---------------------*/
+
+body {
+    overflow-x: hidden;
+}
 
 /* ライブラリ等で追加された要素につけるCSS -------*/
 
@@ -17,19 +22,5 @@
     }
 }
 
-/* モーダルウィンドウコンテンツのCSS ---------------------*/
-
-#modal-overlay {
-    /* 参考文献:https://syncer.jp/jquery-modal-window */
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 120%;
-    /* スマホ対策 */
-    background-color: rgba(0, 0, 0, 0.75);
-    z-index: 1;
-}
 
 /* その他--------------------------------------- */
