--- a/sass/index.scss
+++ b/sass/index.scss
@@ -9,6 +9,13 @@ body {
 
 /* ライブラリ等で追加された要素につけるCSS -------*/
 
+.swal-footer {
+    background-color: #CBE6F3;
+    margin-top: 32px;
+    border-top: 1px solid #E9EEF1;
+    overflow: hidden;
+}
+
 /* その他 */
 
 @keyframes show1 {
